--- a/util/translations/zh-hk.json
+++ b/util/translations/zh-hk.json
@@ -15,6 +15,9 @@
     "label--this-stop-only": "只顯示單站",
     "label--this-and-next-stop": "顯示本站與下站",
     "hint--this-and-next-stop": "（以九巴路線296C為例）\n＊單站顯示：\n\t尚德總站\n\t唐明街公園\n\t將軍澳隧道轉車站 (G2)\n\t創紀之城 (B8)\n\t...\n\n＊顯示本站與下站：\n\t尚德總站 → 唐明街公園\n\t唐明街公園 → 將軍澳隧道轉車站 (G2)\n\t將軍澳隧道轉車站 (G2) → 創紀之城 (B8)\n\t...",
+    "label--numeric-expression": "顯示分站數目排序",
+    "label--show": "顯示排序",
+    "label--hide": "隱藏排序",
 
     "label--search-result": "搜尋結果",
     "label--bus-company": "營辦公司",
