--- a/util/translations/zh-hk.json
+++ b/util/translations/zh-hk.json
@@ -1,6 +1,7 @@
 {
     "button--search": "搜尋",
     "button--copy": "複製到剪貼簿",
+    "button--copied": "已複製到剪貼簿!",
 
     "header--title": "Youtube巴士路線片段影片章節製作器",
     "header--subtitle": "輕鬆拎路線分站做chapter！" ,
