--- a/util/translations/zh-hk.json
+++ b/util/translations/zh-hk.json
@@ -2,9 +2,9 @@
     "button--search": "搜尋",
     "button--copy": "複製到剪貼簿",
     "button--copied": "已複製到剪貼簿!",
-
+    "button--export-json": "導出JSON",
     "header--title": "Youtube巴士路線片段影片章節製作器",
-    "header--subtitle": "輕鬆拎路線分站做chapter！" ,
+    "header--subtitle": "輕鬆拎路線分站做chapter！",
     "header--language-zh": "繁體中文",
     "header--language-en": "English",
     "label--enter-bus-route": "輸入巴士路線",
@@ -19,12 +19,10 @@
     "label--numeric-expression": "顯示分站數目排序",
     "label--show": "顯示排序",
     "label--hide": "隱藏排序",
-
     "label--search-result": "搜尋結果",
     "label--bus-company": "營辦公司",
     "label--bus-route": "路線",
     "label--departure": "起點站",
     "label--destination": "終點站",
-
     "label--stop-info": "站位資料"
 }
